tests/baselines/reference/functionOverloads23(strict=true).errors.txt
functionOverloads23.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads23.ts(2,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
functionOverloads23.ts(3,19): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== functionOverloads23.ts (3 errors) ====
    function foo(bar:(b:string)=>void);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(bar:(a:number)=>void);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(bar:(a?)=>void) { return 0 }
                      ~~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    